bloonix-agent (0.63) released at 2015-09-18

    * Dispatcher.pm updated, need to restart agent and set the dependency
      to Bloonix::Core v0.27.

bloonix-agent (0.62) released at 2015-09-18

    * Just fixed the docs in main.conf and set the default agents to 4.

bloonix-agent (0.61) released at 2015-09-18

    * Fixed max_concurrent_hosts calculation.

bloonix-agent (0.60) released at 2015-09-14

    * Did some performance improvements and implemented the parameter
      max_concurrent_hosts.
    * Implemented agent option "set_tags".

bloonix-agent (0.59) released at 2015-08-28

    * Moved postinst parts into bloonix-init-agent.

bloonix-agent (0.58) released at 2015-08-18

    * Moved all sudo files to /etc/sudoers.d.

bloonix-agent (0.57) released at 2015-08-18

    * Fixed %preun section in spec file.
    * Moved the creation of user bloonix into the core package.

bloonix-agent (0.56) released at 2015-08-06

    * Updated mk_arrays to mk_array_accessors.
    * License information for Strawberry Perl added.

bloonix-agent (0.55) released at 2015-06-16

    * The agent passes now the host and service id via options
      --bloonix-host-id and --bloonix-service-id by default to
      all bloonix plugins.

bloonix-agent (0.54) released at 2015-06-16

    * Implemented support for Windows.
    * Expand sudoers settings for bloonix.

bloonix-agent (0.53) released at 2015-04-22

    * Fixed parsing of command options.

bloonix-agent (0.52) released at 2015-04-14

    * Satellite configuration parameters implemented.

bloonix-agent (0.51) released at 2015-04-07

    * Fixed bloonix-init-host and implemented Bloonix::IO::SIPC.

bloonix-agent (0.50) released at 2015-03-21

    * Implemented Bloonix::IO::SIPC as replacement for Bloonix:REST.

bloonix-agent (0.49) released at 2015-03-09

    * Improved parsing of nagios statistics.
    * Fixed uninizialied value host_id in get_services().
    * An empty host list is now allowed.